所有功能测试完毕，并且优化了刷盘逻辑